--- a/app/components/lookbook/ui/pages/page/page.css
+++ b/app/components/lookbook/ui/pages/page/page.css
@@ -6,6 +6,7 @@
   .page-header {
     border-bottom: 1px solid var(--lookbook-color-base-300);
     padding-block: var(--lookbook-spacing-x-large);
+    font-family: var(--lookbook-font-prose);
   }
 
   .page-title {
@@ -16,6 +17,7 @@
   .page-body {
     padding-top: var(--lookbook-spacing-2x-large);
     padding-bottom: var(--lookbook-spacing-3x-large);
+    font-family: var(--lookbook-font-prose);
   }
 
   .page-footer {
