--- a/assets/entrypoints/app.css
+++ b/assets/entrypoints/app.css
@@ -1,4 +1,5 @@
 @import "../css/themes/light.css";
+@import "../css/fonts.css";
 @import "../css/reset.css";
 @import "../css/base.css";
 @import "../css/forms.css";
