--- a/assets/entrypoints/mailer.css
+++ b/assets/entrypoints/mailer.css
@@ -1,4 +1,5 @@
 @import "../css/themes/light.css";
+@import "../css/fonts.css";
 @import "../css/reset.css";
 @import "../css/base.css";
 
@@ -19,7 +20,7 @@ header {
   margin: 0;
   background: white;
   font-size: var(--lookbook-font-size-small);
-  font-family: var(--lookbook-font-sans);
+  font-family: var(--lookbook-font-ui);
   border-bottom: 1px solid var(--lookbook-divider-color);
   overflow: hidden;
 }
