--- a/public/lookbook-assets/app.css
+++ b/public/lookbook-assets/app.css
@@ -30,11 +30,13 @@
    */
 
   /* Fonts */
-  --lookbook-font-mono: SFMono-Regular, Consolas, "Liberation Mono", Menlo,
-    monospace;
-  --lookbook-font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
+
+  --lookbook-font-ui: "Inter Var", Roboto, "Helvetica Neue", "Arial Nova",
+    "Nimbus Sans", Arial, sans-serif;
+  --lookbook-font-prose: "Open Sans Var", Avenir, Montserrat, Corbel,
+    "URW Gothic", source-sans-pro, sans-serif;
+  --lookbook-font-mono: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
 
   /* Font sizes */
   --lookbook-font-size-2x-small: 0.625rem; /* 10px */
@@ -375,6 +377,53 @@
 
   --lookbook-divider-color: var(--lookbook-color-base-300);
 }
+@font-face {
+  font-family: "Inter";
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+  font-named-instance: "Regular";
+  src: url("./fonts/Inter-roman.var.woff2?v=3.19") format("woff2");
+}
+@font-face {
+  font-family: "Inter";
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: italic;
+  font-named-instance: "Italic";
+  src: url("./fonts/Inter-italic.var.woff2?v=3.19") format("woff2");
+}
+@font-face {
+  font-family: "Source Code Pro Var";
+  font-weight: 200 900;
+  font-style: normal;
+  font-stretch: normal;
+  src: url("./fonts/SourceCodeVariable-roman.var.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Source Code Pro Var";
+  font-weight: 200 900;
+  font-style: italic;
+  font-stretch: normal;
+  src: url("./fonts/SourceCodeVariable-italic.var.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Open Sans Var";
+  font-weight: 200 900;
+  font-style: normal;
+  font-stretch: normal;
+  src: url("./fonts/OpenSans-VariableFont_wdth,wght.woff2") format("woff2");
+  font-variation-settings: "wdth" 100;
+}
+@font-face {
+  font-family: "Open Sans Var";
+  font-weight: 200 900;
+  font-style: italic;
+  font-stretch: normal;
+  src: url("./fonts/OpenSans-Italic-VariableFont_wdth,wght.woff2")
+    format("woff2");
+  font-variation-settings: "wdth" 100;
+}
 *,
 ::before,
 ::after {
@@ -585,10 +634,9 @@ video {
 }
 html,
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol";
-  font-family: var(--lookbook-font-sans);
+  font-family: "Inter Var", Roboto, "Helvetica Neue", "Arial Nova",
+    "Nimbus Sans", Arial, sans-serif;
+  font-family: var(--lookbook-font-ui);
   font-size: 1rem;
   font-size: var(--lookbook-font-size-medium);
   color: var(--lookbook-color-neutral-900);
@@ -599,8 +647,8 @@ body {
   font-size: var(--lookbook-font-size-medium);
 }
 code {
-  font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo,
-    monospace;
+  font-family: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
   font-family: var(--lookbook-font-mono);
 }
 a {
@@ -1077,8 +1125,8 @@ select {
       min-width: 1%;
       width: 100%;
       overflow: hidden;
-      font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo,
-    monospace;
+      font-family: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
       font-family: var(--lookbook-font-mono);
       font-size: 0.75rem;
       font-size: var(--lookbook-font-size-x-small);
@@ -1427,6 +1475,9 @@ select {
       overflow: auto;
     }
 [data-component="prose"] {
+  font-family: "Open Sans Var", Avenir, Montserrat, Corbel,
+    "URW Gothic", source-sans-pro, sans-serif;
+  font-family: var(--lookbook-font-prose);
   color: hsl(240, 6%, 10%);
   color: var(--lookbook-color-base-900);
   font-size: 1rem;
@@ -1547,8 +1598,8 @@ select {
 [data-component="prose"] code:not(pre code) {
     font-size: 0.8em;
     display: inline-block;
-    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo,
-    monospace;
+    font-family: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
     font-family: var(--lookbook-font-mono);
     background-color: hsl(240, 5%, 96%);
     background-color: var(--lookbook-color-base-100);
@@ -1831,8 +1882,8 @@ select {
 [data-component="viewport"] .viewport-dimensions {
     font-size: 0.75rem;
     font-size: var(--lookbook-font-size-x-small);
-    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo,
-    monospace;
+    font-family: "Source Code Pro Var", ui-monospace, "Cascadia Code",
+    Menlo, Consolas, "DejaVu Sans Mono", monospace;
     font-family: var(--lookbook-font-mono);
     padding-left: 0.5rem;
     padding-right: 0.5rem;
@@ -1946,6 +1997,9 @@ select {
     padding-bottom: 1.75rem;
     padding-top: var(--lookbook-spacing-x-large);
     padding-bottom: var(--lookbook-spacing-x-large);
+    font-family: "Open Sans Var", Avenir, Montserrat, Corbel,
+    "URW Gothic", source-sans-pro, sans-serif;
+    font-family: var(--lookbook-font-prose);
   }
 [data-component="page"] .page-title {
     font-weight: 700;
@@ -1958,6 +2012,9 @@ select {
     padding-top: var(--lookbook-spacing-2x-large);
     padding-bottom: 3rem;
     padding-bottom: var(--lookbook-spacing-3x-large);
+    font-family: "Open Sans Var", Avenir, Montserrat, Corbel,
+    "URW Gothic", source-sans-pro, sans-serif;
+    font-family: var(--lookbook-font-prose);
   }
 [data-component="page"] .page-footer {
     border-top: 1px solid hsl(240, 5%, 84%);
