--- a/app/components/lookbook/ui/pages/page/page.css
+++ b/app/components/lookbook/ui/pages/page/page.css
@@ -1,4 +1,6 @@
 [data-component="page"] {
+  font-family: var(--lookbook-font-prose);
+
   .page-slat {
     padding-inline: var(--lookbook-spacing-x-large);
   }
@@ -6,7 +8,6 @@
   .page-header {
     border-bottom: 1px solid var(--lookbook-color-base-300);
     padding-block: var(--lookbook-spacing-x-large);
-    font-family: var(--lookbook-font-prose);
   }
 
   .page-title {
@@ -17,7 +18,6 @@
   .page-body {
     padding-top: var(--lookbook-spacing-2x-large);
     padding-bottom: var(--lookbook-spacing-3x-large);
-    font-family: var(--lookbook-font-prose);
   }
 
   .page-footer {
@@ -30,6 +30,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    font-family: var(--lookbook-font-ui);
   }
 
   .page-nav-link {
