--- a/app/components/lookbook/ui/previews/preview_embed/preview_embed.html.erb
+++ b/app/components/lookbook/ui/previews/preview_embed/preview_embed.html.erb
@@ -9,7 +9,7 @@
     ) do |pane|
       pane.with_toolbar do |toolbar|
         toolbar.with_label { target.label }
-        if display_options.any?
+        if display_options.any? && !target.mailer_preview?
           toolbar.with_button_group do |group|
             group.with_button(icon: :settings_2, tooltip: "Display options") do |button|
               button.with_dropdown do
