--- a/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
+++ b/app/components/lookbook/ui/previews/preview_inspector/preview_inspector.html.erb
@@ -8,7 +8,7 @@
       layout.with_pane("preview-pane") do |pane|
         pane.with_toolbar do |toolbar|
           toolbar.with_breadcrumb(config.previews_nav_label, target.ancestors, target)
-          if display_options.any?
+          if display_options.any? && !target.mailer_preview?
             toolbar.with_button_group do |group|
               group.with_button(icon: :settings_2, tooltip: "Display options") do |button|
                 button.with_dropdown do
