--- a/app/components/lookbook/ui/elements/viewport/viewport.html.erb
+++ b/app/components/lookbook/ui/elements/viewport/viewport.html.erb
@@ -1,7 +1,7 @@
 <%= render component_tag(
   id: id,
   x: {data: "viewport(#{id.to_json})"},
-  class: {"resize-x": resize_x?, "resize-y": resize_y?}
+  class: {"resize-x": resize_x?, "resize-y": resize_y?, "bg-checked": true}
 ) do %>
   <div
     x-ref="wrapper"
