--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -5,7 +5,7 @@
         layout.with_header
 
         layout.with_previews_nav(@previews.tree)
-        layout.with_pages_nav(@pages.tree) if @pages.any?
+        layout.with_pages_nav(@pages.tree)
 
         layout.with_main do
           content_for?(:main) ? yield(:main) : yield
