--- a/app/components/lookbook/ui/elements/icon/icon.css
+++ b/app/components/lookbook/ui/elements/icon/icon.css
@@ -7,4 +7,12 @@
     width: 100%;
     height: 100%;
   }
+
+  &.stroke-1 svg {
+    stroke-width: 1px;
+  }
+
+  &.stroke-2 svg {
+    stroke-width: 2px;
+  }
 }
