--- a/public/lookbook-assets/mailer.css
+++ b/public/lookbook-assets/mailer.css
@@ -52,7 +52,8 @@
   /* Font weights */
   --lookbook-font-weight-light: 300;
   --lookbook-font-weight-normal: 400;
-  --lookbook-font-weight-semibold: 500;
+  --lookbook-font-weight-medium: 500;
+  --lookbook-font-weight-semibold: 600;
   --lookbook-font-weight-bold: 700;
 
   /*
@@ -691,6 +692,10 @@ tr:not(:last-child) {
   outline-offset: 0;
   outline-color: hsl(228, 97%, 89%);
   outline-color: var(--lookbook-color-accent-200);
+}
+/* Utilities */
+.bg-checked {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%23f3f3f3' fill-opacity='1'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
 }
 html,
 body {
