Resolve panel data values against current context

--- a/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.html.erb
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.html.erb
@@ -1,5 +1,6 @@
 <%= render component_tag(:button,
   type: "button",
+  class: {disabled: disabled?},
   x: {
     data: "toolbarTab(#{name.to_json})",
     "@click": "selectTab(name)",
