--- a/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_tab/toolbar_tab.css
@@ -1,4 +1,5 @@
 [data-component="toolbar-tab"] {
+  color: var(--lookbook-color-base-800);
   height: var(--lookbook-toolbar-height);
   display: flex;
   align-items: center;
@@ -7,6 +8,10 @@
   border-bottom: 2px solid transparent;
   cursor: pointer;
   user-select: none;
+
+  &.disabled {
+    color: var(--lookbook-color-base-300);
+  }
 
   &[aria-selected="true"] {
     color: var(--lookbook-color-accent-500);
